# devtrack

./: .gitignore  README.md
.github/: copilot-instructions.md
backend/: .env.example  .gitignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: cb24dcb7b321_initial_schema.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  base.py  comment.py  issue.py  project.py  user.py
backend/app/routers/: __init__.py  issues.py  projects.py
backend/app/schemas/: __init__.py  comment.py  issue.py  project.py  user.py
backend/app/services/: __init__.py  issue.py  project.py
backend/tests/: conftest.py  test_issues.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: .gitkeep  Board.tsx  IssueCard.tsx  NewIssueForm.tsx
frontend/src/hooks/: .gitkeep  useIssues.ts
frontend/src/pages/: .gitkeep
frontend/src/services/: .gitkeep  issueService.ts
frontend/src/types/: index.ts
